--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -873,26 +873,60 @@ small {
     color: #ffffff !important;
 }
 
+.current-location-box
+{
+    padding: 0 8px;
+}
+
 .current-location-box p
 {
     padding: 2px;
     line-height: 17px;
-    margin-left: 34px;
     height: 34px;
+    margin: 0;
 }
 
-.current-location-box img
+.location
 {
-    font-size: 30px;
-    line-height: 30px;
-    position: absolute;
-    top: 7px;
-    left: 4px;
+    font-weight: bold;
 }
 
 .current-location-box .update-location-opener
 {
     position: absolute;
     top: 2px;
+    right: 2px;
+}
+
+.location-box-header h2
+{
+    padding-left: 30px;
+    background-image: url('../../../site/png/location.png');
+    background-repeat: no-repeat;
+}
+
+.update-location-name-container
+{
+    margin-right: 110px;
+    padding-left: 5px;
+}
+
+.update-location-name
+{
+    width: 100%;
+    padding: 5px 0;
+}
+
+.update-location
+{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+.cancel-update
+{
+    position: absolute;
+    top: -36px;
     right: 2px;
 }
