--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -106,32 +106,31 @@ ul li.transport-link a img { border: 0; }
     <h2>{{ bus_stops.results_type }} bus stops - {% now "G:i:s "%}</h2>
   </div>
   
-  <table class="content{% ifequal bus_stops.results_type "Favourite" %} no-round-bottom{% endifequal %}">
+  <table class="content">
     <tbody>
 
 {% for entity in bus_stops.entities %}
-      <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">{{ entity.title }}{% ifnotequal bus_stops.results_type "Favourite" %} <small>({{ entity.distance.km|floatformat:3 }} km{{ entity.bearing }})</small>{% endifnotequal %}</a></th></tr>
-      {% if entity.metadata.real_time_information.pip_info %}
-        <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
-      {% endif %}
-{% if entity.metadata.real_time_information.services %}
-{% for service in entity.metadata.real_time_information.services %}
-      <tr>
-        <td style="text-align: center;"><big>{{ service.service }}</big></td>
-        <td>{{ service.destination }}</td>
-        <td>{{ service.next }}{% if service.following %}<small>, {{ service.following.0 }}{% if service.following.1 %}, &hellip;{% endif %}</small>{% endif %}</td>
-      </tr>
+	<tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">{{ entity.title }}{% ifnotequal bus_stops.results_type "Favourite" %} <small>({{ entity.distance.km|floatformat:3 }} km{{ entity.bearing }})</small>{% endifnotequal %}</a></th></tr>
+	{% if entity.metadata.real_time_information.pip_info %}
+	  <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
+	{% endif %}
+	{% if entity.metadata.real_time_information.services %}
+		{% for service in entity.metadata.real_time_information.services %}
+		  <tr>
+			<td style="text-align: center;"><big>{{ service.service }}</big></td>
+			<td>{{ service.destination }}</td>
+			<td>{{ service.next }}{% if service.following %}<small>, {{ service.following.0 }}{% if service.following.1 %}, &hellip;{% endif %}</small>{% endif %}</td>
+		  </tr>
+		{% endfor %}
+	{% else %}
+	    {% if not entity.metadata.real_time_information.pip_info %}
+	      <tr><td colspan="3">There is currently no departure information from this stop</td></tr>
+	    {% endif %}
+	{% endif %}
 {% endfor %}
-{% else %}
-    {% if not entity.metadata.real_time_information.pip_info %}
-      <tr><td colspan="3">There is currently no departure information from this stop</td></tr>
-    {% endif %}
-{% endif %}
-{% empty %}
-      <tr><td colspan="3">{% include "geolocation/update_location_embed.html" %}</td></tr>
-{% endfor %}
-    </tbody>
-  </table>
+	  </tbody>
+	</table>
+  {% include "geolocation/update_location_embed.html" %}
   {% ifequal bus_stops.results_type "Favourite" %}
   <ul class="link-list">
     <li><a href="{% url places:nearby-detail "bus-stop" %}">View nearby bus stops</a></li>
