Show more icons on Android - fixes MOX-127

--- a/demos/molly_oxford/templates/base.html
+++ b/demos/molly_oxford/templates/base.html
@@ -12,8 +12,9 @@
     {% compressed_css 'svg' %}
   {% endif %}
 
-{% if device|device_has_parent:"apple_generic" %}
+{% if device|device_has_parent:"apple_generic" or device.device_os == "Android" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}site/png/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon-precomposed" href="{{ MEDIA_URL}}site/png/apple-touch-icon.png"/>
     <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}site/png/apple-touch-startup-image.jpg">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
