Set background colour to prevent the brown showing through on Nokia - also stop the bus icon showing on the My Location box inside bus in the transportation page

--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -952,10 +952,20 @@ small {
     border-bottom: none !important;
 }
 
+.location-box .header h2
+{
+    background-image: none !important;
+}
+
 .location-box .section-content
 {
     padding: 0;
     border-top: none !important;
+}
+
+.location-box
+{
+    background-color: #DFDFDF !important;
 }
 
 .automatic-update-button
