Do some cleanup and add some inline documentation

--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends "home/base.html" %}
 {% load molly_utils %}
 {% load molly_apps_weather %}
-{% load portal_misc %}{% load maps %}{% load molly_apps_search %}{% load oxford_apps_river_status %}
+{% load portal_misc %}{% load molly_apps_search %}{% load oxford_apps_river_status %}
 
 {% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
 
