--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends "home/base.html" %}
 {% load molly_apps_weather %}
-{% load portal_misc %}{% load maps %}{% load molly_apps_search %}
+{% load portal_misc %}{% load molly_apps_search %}
 
 {% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
 
