--- a/molly/apps/places/templates/places/service_details.html
+++ b/molly/apps/places/templates/places/service_details.html
@@ -1,5 +1,5 @@
 {% extends "places/base.html" %}
-{% load molly_utils %}
+{% load molly_utils %}{% load maps %}
 
 {% block content %}
 
@@ -111,14 +111,7 @@
         <h2>Map</h2>
     </div>
     <div class="section-content">
-{% ifnotequal style_group "dumb" %}
-    <div class="backgrounded-image" style="background-image:url('{% url osm:generated_map map_hash %}'); height:{{ map_height }}px">
-    {% include "places/map_elements.html" %}
-    </div>
-{% else %}
-    <img src="{% url osm:generated_map map_hash %}" alt="Map"><br />
-    {% include "places/map_elements.html" %}
-{% endifnotequal %}
+    {% render_map map %}
     </div>
 </div>
 
