--- a/molly/apps/z3950/templates/z3950/item_holdings_detail.html
+++ b/molly/apps/z3950/templates/z3950/item_holdings_detail.html
@@ -59,14 +59,7 @@
 <div class="section">
     <h2>{{ library.location|join:" - " }}</h2>
 {% if library.oxpoints_id and library.oxpoints_location %}
-    {% ifnotequal style_group "groups-dumb" %}
-    	<div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ map_height }}px">
-            {% include "places/map_elements.html" %}
-        </div>
-    {% else %}
-        <img src="{% map_url library.oxpoints_location %}" alt="Map"><br />
-        {% include "places/map_elements.html" %}
-    {% endifnotequal %}
+    {% render_location_map library.oxpoints_location %}
 {% endif %}
 
     <ul class="content-list">
