Add a touchmaplite map which can be included in an iframe - also change paths in touchmaplite where necessary

--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -273,6 +273,7 @@ div.osm-license {
     padding: 2px;
     background: #ffffff;
     background-opacity: 0.5;
+    color: #000000;
 }
 /* End Webcams/Maps */
 
