--- a/demos/molly_oxford/site_media/touchmaplite/css/touchMapLite/viewer.css
+++ b/demos/molly_oxford/site_media/touchmaplite/css/touchMapLite/viewer.css
@@ -8,7 +8,7 @@ body {
 	overflow: hidden;
 }
 #viewer {
-	background: #dddddd url(../images/loading.gif) center no-repeat;
+	background: #dddddd url(../../../touchmaplite/images/loading.gif) center no-repeat;
 	width: 100%;
 	height: 100%;
 	position: relative;
@@ -26,11 +26,11 @@ body {
 	/* FIXME: let's apply this in GSV.js */
 	/*cursor: grab;*/
 	cursor: -moz-grab;
-	_cursor: url(../gfx/grab.cur);
+	_cursor: url(../../../touchmaplite/gfx/grab.cur);
 }
 #viewer .surface {
 	z-index: 20;
-	_background: url(../gfx/blank.gif) no-repeat center center; /* NOTE: required for IE to"see" the surface */
+	_background: url(../../../touchmaplite/gfx/blank.gif) no-repeat center center; /* NOTE: required for IE to"see" the surface */
 }
 #viewer .well {
 	overflow: hidden;
